# mlzoomcamp

./: hwk1.ipynb  hwk2.ipynb  hwk3.ipynb  hwk4.ipynb  hwk6.ipynb  pyproject.toml  test.ipynb
week5/: Dockerfile  app.py  hwk5.ipynb  pyproject.toml
